# HCAI_Dressify

./: .env.example  .gitignore  ARCHITECTURE.md  CNAME  README.md  README_PROJECT_STRUCTURE.md  SUPABASE_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy-pages.yml
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/utils/: __init__.py  remove_background.py
public/: README.md  manifest.json  sw.js
src/: App.tsx  README.md  index.css  vite-env.d.ts
src/components/: AuthPanel.tsx  AuthTopbar.tsx  CanvasEditor.tsx  ClosetLibrary.tsx  ConsentModal.tsx  GeneratePanel.tsx  GeneratedItemsList.tsx  ImageEditorDialog.tsx  ItemCategoryBadge.tsx  LanguageToggle.tsx  NavLink.tsx  OutfitLibrary.tsx  README.md  SavePieceToClosetDialog.tsx  SavedItemsLibrary.tsx  SavedItemsLibrary.tsx.bak  SavedOutfitsLibrary.tsx  SavedOutfitsLibrary.tsx.bak  StyleTemplateSelector.tsx  SystemWalkthrough.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UploadSection.tsx  WardrobeLibrary.tsx  WardrobeLibrary.tsx.bak
src/hooks/: README.md  use-mobile.tsx  useCloset.ts  useClosetFolders.ts  useOutfitFolders.ts  useOutfits.ts  useSavedItemFolders.ts  useSavedItems.ts  useSystemPrompt.ts  useWardrobe.ts  useWardrobeFolders.ts
src/lib/: README.md  closetFolders.ts  clothingCategory.ts  collectionAccents.ts  error.ts  id.ts  supabase.ts  utils.ts  wardrobeFolders.ts
src/pages/: AuthCallbackPage.tsx  (+13 more)
supabase/: fix_delete_policies.sql  saved_items_and_folders 2.sql  schema.sql  wardrobe_items_source_column.sql
(+64 files in other folders)
