[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.3",
    "pillow>=12.2.0",
    "python-multipart>=0.0.22",
    "scikit-image>=0.26.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers==4.39.1",
    "uvicorn[standard]>=0.42.0",
]
